--- a/fe/.eslintrc.json
+++ b/fe/.eslintrc.json
@@ -25,6 +25,8 @@
     "import/prefer-default-export": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-no-useless-fragment": "off",
+    "@typescript-eslint/lines-between-class-members": "off",
+    "@typescript-eslint/no-throw-literal": "off",
     "prettier/prettier": [
       "error",
       {
@@ -35,6 +37,7 @@
     "react/no-unused-prop-types": "off",
     "no-restricted-syntax": "off",
     "no-alert": "off",
-    "jsx-a11y/control-has-associated-label": "off"
+    "jsx-a11y/control-has-associated-label": "off",
+    "jsx-a11y/label-has-associated-control": "off"
   }
 }
