--- a/fe/package.json
+++ b/fe/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "next": "14.2.6",
+    "@tanstack/react-query": "^5.51.11",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
