feat: .빌드 오류 해결 (#14)
* Merged changes from feature/news to news2

* 보험팁 링크연결 + 충돌 수정 + merge 테스트 (이슈 #7)

* 네비게이션 바에서 현재 경로에 따른 링크 강조 스타일 적용

* 충동 해결

* Update package.json

* 충돌 해결

* 패키지 버전 및 설정 파일 수정

* 충돌 해결

* reviewpage추가(수정중)

* 파일 정리 및 리뷰페이지

* setting: tanstack-query, axios를 이용한 api 연결 환경설정

* feat: api 연결 및 모달 구현

* refactor

* fix

* fix

* 빌드 오류 해결 및 파일 수정

* Update QueryProvider.tsx

* Update QueryProvider.tsx

* Update QueryProvider.tsx

* Delete fe/src/lib/QueryProvider.tsx

* Add files via upload

---------

Co-authored-by: yeyounging <133792082+yeyounging@users.noreply.github.com>

--- a/fe/tsconfig.json
+++ b/fe/tsconfig.json
@@ -16,6 +16,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "types.d.ts"], // 추가된 부분
   "exclude": ["node_modules"]
 }
