--- a/fe/package.json
+++ b/fe/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+
+    "@heroicons/react": "^2.1.5",
+    "@tanstack/react-query": "^5.51.11",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
@@ -16,13 +19,17 @@
     "@tanstack/react-query": "^5.51.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "eslint": "^8.57.0",
