--- a/fe/package.json
+++ b/fe/package.json
@@ -9,14 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-
     "@heroicons/react": "^2.1.5",
     "@tanstack/react-query": "^5.51.11",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
-    "next": "14.2.6",
-    "@tanstack/react-query": "^5.51.11",
+    "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
