--- a/fe/vercel.json
+++ b/fe/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "${env:API_URL}/api/:path*"
+      "source": "/api/:path*/",
+      "destination": "${env:API_URL}/api/:path*/"
     }
   ]
 }
