--- a/fe/tsconfig.json
+++ b/fe/tsconfig.json
@@ -16,6 +16,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "types.d.ts"], // 추가된 부분
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "types.d.ts",
+    "src/pages/customerReview/reviewWrite"
+  ], // 추가된 부분
   "exclude": ["node_modules"]
 }
