--- a/fe/package.json
+++ b/fe/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "@tanstack/react-query": "^5.51.11",
-    "@heroicons/react": "^2.1.5",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.51.11",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
@@ -28,7 +27,6 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^18.3.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
