--- a/fe/package.json
+++ b/fe/package.json
@@ -10,16 +10,25 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.51.11",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.438.0",
     "next": "14.2.6",
     "react": "^18",
+    "react-day-picker": "^9.0.8",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2"
