--- a/fe/package.json
+++ b/fe/package.json
@@ -21,9 +21,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.438.0",
     "next": "14.2.6",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-day-picker": "^9.0.8",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18",
